--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "com.meta.xr.sdk.all": "62.0.0",
+    "com.meta.xr.sdk.interaction.ovr": "62.0.0",
     "com.normalvr.normcore": "2.9.2",
     "com.unity.collab-proxy": "2.2.0",
     "com.unity.ide.rider": "3.0.24",
